[tool.poetry]
name = "qligraphy"
version = "0.1.0"
description = "graphql-schema -> pydantic models"
authors = ["kuchichan <pawel.kucharski@hotmail.com>"]
license = "BSD-3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
graphql-core = "^3.2.0"
pydantic = "^1.9.0"
astunparse = "^1.6.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"
flake8 = "^4.0.1"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
