[tool.poetry]
name = "qligraphy"
version = "0.1.0"
description = "graphql-schema -> pydantic models"
authors = ["kuchichan <pawel.kucharski@hotmail.com>"]
license = "BSD-3-Clause License"

[tool.poetry.dependencies]
python = "^3.9"
graphql-core = "^3.2.0"
pydantic = "^1.9.0"
astunparse = "^1.6.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"
ipython = "^8.0.1"
mypy = "^0.931"
coverage = "^6.3.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable=['C0114,C0115,C0116']
